Got Testimonials working but nav and testomonials are not centered correctly some css fkd

--- a/styles.css
+++ b/styles.css
@@ -11,31 +11,31 @@ body {
     margin: 0;
     text-decoration: none;
     min-height: 100vh;
-    justify-content: center;
-    align-items: center;
 }
 
 .hero {
     display: flex;
     justify-content: center;
-    height: 100vh;
+    height: 60vh;
     width: 100%;
     position: relative;
     margin-top: 30px;
 }  
 
 .image-hero {
+    display: flex;
     top: 0%;
     left: 50%;
     max-width: 1000px;
     width: 100%;
     height: 700px; 
-    border-radius: 100px;
+    border-radius: 20px;
     margin-top: 0rem;
     padding-top: 0rem;
 }
 
 .hero-text {
+    display: flex;
     position: absolute;
     color: #ffffff;
     font-size: 50px;
@@ -137,18 +137,49 @@ img {
     padding-right: 10px;
 }
 
+.testimonials {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+h1 {
+    margin-top: 10px;
+    margin-bottom: 30px;
+    font-size: 50px;
+    color: #000000;
+    text-align: center;
+}
+
+h2 {
+    margin-top: 10px;
+    margin-bottom: 30px;
+    font-size: 30px;
+    color: #000000;
+    text-align: center;
+}
+
+.testimonials {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+}
+
 .slider {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 700px;
     overflow: hidden;
-    align-items: center;
+    border-radius: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .item {
     position: absolute;
     width: 300px;
-    height: 420px;
+    height: 520px;
     text-align: justify;
     background-color: #fff;
     border-radius: 10px;
@@ -160,7 +191,7 @@ img {
 
 #next, #prev {
     position: absolute;
-    top: 40%;
+    top: 30%;
     color: #fff;
     background-color: transparent;
     border: none;
